--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>INCREMENT:</h1>
+            <h1>HOURS STUDIED:</h1>
             <h2 id="count-el">0</h2>
             <button id="increment-btn" onclick="increment()">HOUR</button>
             <button id="save-btn" onclick="save()">SAVE</button>
