--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div class="container">
             <h1>HOURS STUDIED:</h1>
             <h2 id="count-el">0</h2>
-            <button id="increment-btn" onclick="increment()">HOUR</button>
+            <button id="increment-btn" onclick="increment()">INCREMENT</button>
             <button id="save-btn" onclick="save()">SAVE</button>
             <p id="save-el">Previous entries: </p>
         </div>
